# omp-agent-template

./: .DEVREADME.md  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PROTO.md  README.md  elon_ko.sh  package-lock.json  package.json  pyproject.toml  ro-definition-of-done.md  tsconfig.json
.agents/skills/docworm/: SKILL.md
.agents/skills/drpe/: SKILL.md
.agents/skills/elon/: SKILL.md
.agents/skills/hr/: SKILL.md
.agents/skills/leaddev/: SKILL.md
.app/: IDEAS.md  PROJECT.md  REQ.md  RESEARCH.md  SPEC.md  subagent-panel-contract.md
.github/workflows/: ci.yml  release.yml
.omp-plugin/: marketplace.json
.omp/agents/: drpe.md  hr.md  leaddev.md  middev.md
.omp/extensions/: enforce-orchestrator.ts
rules/: ro-definition-of-done.md  ro-orchestrator-invariant.md
scaffold/: AGENTS.md  APPEND_SYSTEM.md  PROTO.md  RULES.md
scripts/: validate-plugins.sh
src/: __main__.py  append-system.default.md  config.py  dot-agreement.test.ts  dot-agreement.ts  enforce-orchestrator.test.ts  enforce-orchestrator.ts  graph_client.py  main.py  mess-transport.test.ts  mess-transport.ts  output.py  preflight.py  subagent-panel.test.ts  subagent-panel.ts  subagent-tabs.test.ts  subagent-tabs.ts
src/entra_bulk/: __init__.py  cli.py  config.py  exceptions.py  execution.py  graph_client.py  input_parser.py  models.py  reporter.py  validation.py
tests/: conftest.py  test_cli.py  test_config.py  test_execution.py  test_graph_client.py  test_input_parser.py  test_main.py  test_models.py  test_output.py  test_preflight.py  test_reporter.py  test_validation.py
(+20 files in other folders)
