[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entra-group-manager"
version = "0.1.0"
description = "Manage Microsoft Entra ID group memberships via CLI"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
    "msal>=1.28",
    "requests>=2.31",
    "colorama>=0.4",
]

[project.scripts]
entra-group-manager = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]
